WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181608
Logged JSON should escape "'s and \'s in strings.
https://bugs.webkit.org/show_bug.cgi?id=181608
Summary
Logged JSON should escape "'s and \'s in strings.
Keith Rollin
Reported
2018-01-12 12:07:14 PST
The logging in
bug 181556
and
bug 180883
should properly escape strings printed as part of JSON-formatted output.
Attachments
Patch
(6.34 KB, patch)
2018-01-12 12:23 PST
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Rollin
Comment 1
2018-01-12 12:23:34 PST
Created
attachment 331225
[details]
Patch
EWS Watchlist
Comment 2
2018-01-12 12:26:22 PST
Attachment 331225
[details]
did not pass style-queue: ERROR: Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:748: Missing space before { [whitespace/braces] [5] ERROR: Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:749: Missing space before { [whitespace/braces] [5] ERROR: Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:750: Missing space before { [whitespace/braces] [5] ERROR: Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:767: Missing space before { [whitespace/braces] [5] ERROR: Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:768: Missing space before { [whitespace/braces] [5] ERROR: Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:769: Missing space before { [whitespace/braces] [5] ERROR: Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:770: Missing space before { [whitespace/braces] [5] ERROR: Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:776: Missing space before { [whitespace/braces] [5] ERROR: Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:777: Missing space before { [whitespace/braces] [5] ERROR: Source/WebCore/loader/ResourceLoadObserver.cpp:316: Missing space before { [whitespace/braces] [5] ERROR: Source/WebCore/loader/ResourceLoadObserver.cpp:317: Missing space before { [whitespace/braces] [5] Total errors found: 11 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 3
2018-01-12 12:43:37 PST
Comment on
attachment 331225
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-01-12 13:39:05 PST
Comment on
attachment 331225
[details]
Patch Clearing flags on attachment: 331225 Committed
r226913
: <
https://trac.webkit.org/changeset/226913
>
WebKit Commit Bot
Comment 5
2018-01-12 13:39:06 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-01-12 13:40:34 PST
<
rdar://problem/36481015
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug