Logged JSON should escape "'s and \'s in strings. https://bugs.webkit.org/show_bug.cgi?id=181608

Reviewed by Brent Fulgham.

Source/WebCore:

No new tests -- no new functionality, just changed logging. The
efficacy of the logging was verified by inspecting its output.

* loader/ResourceLoadObserver.cpp:
(WebCore::ResourceLoadObserver::logUserInteractionWithReducedTimeResolution):

Source/WebKit:

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::logCookieInformation const):


Canonical link: https://commits.webkit.org/197471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226913 268f45cc-cd09-0410-ab3c-d52691b4dbfc